--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Srovnávač dimenzování kabelů v2.0.0</title>
+    <title>Srovnávač dimenzování kabelů v2.0.1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -86,6 +86,7 @@
                     <small class="muted-text">Při >1 kabelu zvažte snížení 'kₛ' v pokročilém nastavení (např. 0.8 pro 2
                         kabely vedle sebe).</small>
                 </div>
+
                 <div class="form-row">
                     <div class="form-group">
                         <label for="startPrurez">Začít srovnání od</label>
@@ -134,6 +135,10 @@
                         </div>
                     </div>
                 </details>
+
+                <button type="button" id="resetButton" class="button-reset">
+                    Obnovit výchozí hodnoty
+                </button>
 
             </section>
 
