--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="vykon">Výkon (kW)</label>
-                        <input type="number" id="vykon" placeholder="např. 250" value="250">
+                        <input type="number" id="vykon" placeholder="např. 250">
                     </div>
                     <div class="form-group">
                         <label for="proud">Proud (A)</label>
@@ -40,18 +40,18 @@
                 </div>
                 <div class="form-group">
                     <label for="cosPhi">Účiník (cos φ)</label>
-                    <input type="number" id="cosPhi" value="0.9" step="0.01" min="0.1" max="1">
+                    <input type="number" id="cosPhi" placeholder="např. 0.98" step="0.01" min="0.1" max="1">
                 </div>
 
                 <h2>2. Vedení</h2>
                 <div class="form-row">
                     <div class="form-group">
                         <label for="delka">Délka (m)</label>
-                        <input type="number" id="delka" value="30">
+                        <input type="number" id="delka" placeholder="např. 10">
                     </div>
                     <div class="form-group">
                         <label for="ubytek">Požad. úbytek (%)</label>
-                        <input type="number" id="ubytek" value="5.0" step="0.5">
+                        <input type="number" id="ubytek" placeholder="např. 5%" step="0.5">
                     </div>
                 </div>
                 <div class="form-group">
